# virg

./: .git_push.bat  .gitignore  .travis.yml  LICENSE  README.md  index.css  index.html  index.md  logfile.nepLog  project.py  pyproject.toml  requirements.txt  test_api.py
.circleci/: config.yml
Project/myAddon/myAddon_BP/: manifest.json
Project/myAddon/myAddon_RP/: manifest.json
neptune_exp/: __init__.py  __main__.py  main.py
neptune_exp/core/: create_project.py
neptune_lib/: __init__.py  __main__.py  nepInit.py  nepMain.py  nepManifest.py
neptune_lib/components/: textures.py
neptune_lib/core/: create_project.py  create_texture.py
neptune_lib/tests/: test_api.py
test/: test.py
tests/: test.py  test_api.py  test_project.py  tests.py
